project 2/elastic-ip.tf
resource "aws_eip" "elasticip" {
  #instance = aws_instance.web.id
  #domain   = "vpc"
}
